Bug 1142935 - Reset transports with NuwaAddConstructor(). r=tlee, a=bajaj